@@ -3,6 +3,7 @@ package play.libs;
 import java.io.StringReader;
 import java.net.URI;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -32,13 +33,13 @@ public class OpenID {
     }
 
     // ~~~ API
-    String id;
+    final List<String> sregRequired = new ArrayList<>();
+    final List<String> sregOptional = new ArrayList<>();
+    final Map<String, String> axRequired = new HashMap<>();
+    final Map<String, String> axOptional = new HashMap<>();
+    final String id;
     String returnAction;
     String realmAction;
-    List<String> sregRequired = new ArrayList<>();
-    List<String> sregOptional = new ArrayList<>();
-    Map<String, String> axRequired = new HashMap<>();
-    Map<String, String> axOptional = new HashMap<>();
 
     public OpenID returnTo(String action) {
         this.returnAction = action;
@@ -134,35 +135,35 @@ public class OpenID {
                 url += "&";
             }
 
-            url += "openid.ns=" + URLEncoder.encode("http://specs.openid.net/auth/2.0", "UTF-8");
+            url += "openid.ns=" + URLEncoder.encode("http://specs.openid.net/auth/2.0", StandardCharsets.UTF_8);
             url += "&openid.mode=checkid_setup";
-            url += "&openid.claimed_id=" + URLEncoder.encode(claimedId, "utf8");
-            url += "&openid.identity=" + URLEncoder.encode(delegate == null ? claimedId : delegate, "utf8");
+            url += "&openid.claimed_id=" + URLEncoder.encode(claimedId, StandardCharsets.UTF_8);
+            url += "&openid.identity=" + URLEncoder.encode(delegate == null ? claimedId : delegate, StandardCharsets.UTF_8);
 
             if (returnAction != null && (returnAction.startsWith("http://") || returnAction.startsWith("https://"))) {
-                url += "&openid.return_to=" + URLEncoder.encode(returnAction, "utf8");
+                url += "&openid.return_to=" + URLEncoder.encode(returnAction, StandardCharsets.UTF_8);
             } else {
-                url += "&openid.return_to=" + URLEncoder.encode(Request.current().getBase() + Router.reverse(returnAction), "utf8");
+                url += "&openid.return_to=" + URLEncoder.encode(Request.current().getBase() + Router.reverse(returnAction), StandardCharsets.UTF_8);
             }
             if (realmAction != null && (realmAction.startsWith("http://") || realmAction.startsWith("https://"))) {
-                url += "&openid.realm=" + URLEncoder.encode(realmAction, "utf8");
+                url += "&openid.realm=" + URLEncoder.encode(realmAction, StandardCharsets.UTF_8);
             } else {
-                url += "&openid.realm=" + URLEncoder.encode(Request.current().getBase() + Router.reverse(realmAction), "utf8");
+                url += "&openid.realm=" + URLEncoder.encode(Request.current().getBase() + Router.reverse(realmAction), StandardCharsets.UTF_8);
             }
 
             if (!sregOptional.isEmpty() || !sregRequired.isEmpty()) {
-                url += "&openid.ns.sreg=" + URLEncoder.encode("http://openid.net/extensions/sreg/1.1", "UTF-8");
+                url += "&openid.ns.sreg=" + URLEncoder.encode("http://openid.net/extensions/sreg/1.1", StandardCharsets.UTF_8);
             }
             String sregO = "";
             for (String a : sregOptional) {
-                sregO += URLEncoder.encode(a, "UTF-8") + ",";
+                sregO += URLEncoder.encode(a, StandardCharsets.UTF_8) + ",";
             }
             if (!StringUtils.isEmpty(sregO)) {
                 url += "&openid.sreg.optional=" + sregO.substring(0, sregO.length() - 1);
             }
             String sregR = "";
             for (String a : sregRequired) {
-                sregR += URLEncoder.encode(a, "UTF-8") + ",";
+                sregR += URLEncoder.encode(a, StandardCharsets.UTF_8) + ",";
             }
             if (!StringUtils.isEmpty(sregR)) {
                 url += "&openid.sreg.required=" + sregR.substring(0, sregR.length() - 1);
@@ -172,10 +173,10 @@ public class OpenID {
                 url += "&openid.ns.ax=http%3A%2F%2Fopenid.net%2Fsrv%2Fax%2F1.0";
                 url += "&openid.ax.mode=fetch_request";
                 for (String a : axOptional.keySet()) {
-                    url += "&openid.ax.type." + a + "=" + URLEncoder.encode(axOptional.get(a), "UTF-8");
+                    url += "&openid.ax.type." + a + "=" + URLEncoder.encode(axOptional.get(a), StandardCharsets.UTF_8);
                 }
                 for (String a : axRequired.keySet()) {
-                    url += "&openid.ax.type." + a + "=" + URLEncoder.encode(axRequired.get(a), "UTF-8");
+                    url += "&openid.ax.type." + a + "=" + URLEncoder.encode(axRequired.get(a), StandardCharsets.UTF_8);
                 }
                 if (!axRequired.isEmpty()) {
                     String r = "";
@@ -358,7 +359,7 @@ public class OpenID {
         /**
          * Extensions values
          */
-        public Map<String, String> extensions = new HashMap<>();
+        public final Map<String, String> extensions = new HashMap<>();
 
         @Override
         public String toString() {
