@@ -5,11 +5,11 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.lang.annotation.Annotation;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 import java.lang.reflect.Type;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Stream;
 
@@ -56,7 +56,7 @@ public class PluginCollection {
     /**
      * List that holds all loaded plugins, enabled or disabled
      */
-    protected List<PlayPlugin> allPlugins = new ArrayList<>();
+    protected final List<PlayPlugin> allPlugins = new ArrayList<>();
 
     /**
      * Readonly copy of allPlugins - updated each time allPlugins is updated. Using this cached copy so we don't have to
@@ -67,7 +67,7 @@ public class PluginCollection {
     /**
      * List of all enabled plugins
      */
-    protected List<PlayPlugin> enabledPlugins = new ArrayList<>();
+    protected final List<PlayPlugin> enabledPlugins = new ArrayList<>();
 
     /**
      * Readonly copy of enabledPlugins - updated each time enabledPlugins is updated. Using this cached copy so we don't
@@ -78,7 +78,7 @@ public class PluginCollection {
     /**
      * List of all enabled plugins with filters
      */
-    protected List<PlayPlugin> enabledPluginsWithFilters = new ArrayList<>();
+    protected final List<PlayPlugin> enabledPluginsWithFilters = new ArrayList<>();
 
     /**
      * Readonly copy of enabledPluginsWithFilters - updated each time enabledPluginsWithFilters is updated. Using this
@@ -94,7 +94,7 @@ public class PluginCollection {
      * @return Read only list of plugins
      */
     protected List<PlayPlugin> createReadonlyCopy(List<PlayPlugin> list) {
-        return Collections.unmodifiableList(new ArrayList<>(list));
+        return List.copyOf(list);
     }
 
     private static class LoadingPluginInfo implements Comparable<LoadingPluginInfo> {
@@ -152,7 +152,7 @@ public class PluginCollection {
         SortedSet<LoadingPluginInfo> pluginsToLoad = new TreeSet<>();
         for (URL url : urls) {
             Logger.trace("Found one plugins descriptor, %s", url);
-            try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream(), "utf-8"))) {
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream(), StandardCharsets.UTF_8))) {
                 String line;
                 while ((line = reader.readLine()) != null) {
                     if (line.trim().length() == 0) {
@@ -202,7 +202,7 @@ public class PluginCollection {
             String playPluginsDescriptors = Play.configuration.getProperty("play.plugins.descriptor");
             if (playPluginsDescriptors != null) {
                 return Stream.of(playPluginsDescriptors.split(","))
-                    .map(playPluginsDescriptor -> fileToUrl(playPluginsDescriptor))
+                    .map(this::fileToUrl)
                     .collect(toList());
             }
             return Collections.list(Play.classloader.getResources(play_plugins_resourceName));
